kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: otus-hw-1-deployment
    labels:
        app: otus-hw-1-deployment
spec:
    selector:
        matchLabels:
            app: otus-hw-1
    replicas: 2
    template:
        metadata:
            labels:
                app: otus-hw-1
        spec:
            containers:
                - image: jennik/otus-hw-1
                  name: otus-hw-one
                  ports:
                      - containerPort: 8000
