kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: otus-hw-1-service
    name: otus-hw-1-service
spec:
    ports:
        - name: http
          port: 80
          targetPort: 8000
    selector:
        app: otus-hw-1
