kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: otus-hw-1
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: arch.homework
          http:
              paths:
                  - backend:
                        service:
                            name: otus-hw-1-service
                            port:
                                number: 80
                    pathType: Exact
                    path: /health
